Add tests for nested fields filter
Signed-off-by: Florent MILLOT <millotflo@gmail.com>